fixing typos in sentiment_analysis.ipynb

--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -1498,7 +1498,7 @@
    "outputs": [],
    "source": [
     "query1_results = search_and_extract_results(\n",
-    "    table, embedding_model, query1, n_results=25\n",
+    "    table, embedding_model, query1, n_results=10\n",
     ")"
    ]
   },
@@ -1851,14 +1851,14 @@
     ") -> None:\n",
     "    # find similar reviews\n",
     "    query1_results = search_and_extract_results(\n",
-    "        table, embedding_model, query1, n_results=n_results\n",
+    "        table, embedding_model, query, n_results=n_results\n",
     "    )\n",
     "\n",
     "    # top 3 most similar\n",
     "    print(query1_results[:3][\"Review_Text\"])\n",
     "\n",
     "    # sentiment of similar reviews\n",
-    "    plot_sentiment(sentiment_counts_by_branch(query1_results), query1)"
+    "    plot_sentiment(sentiment_counts_by_branch(query1_results), query)"
    ]
   },
   {
