Add import nltk lib music sample

--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -70,7 +70,9 @@
    "source": [
     "# embedding categorical data\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from gensim.models import Word2Vec"
+    "from gensim.models import Word2Vec\n",
+    "import nltk\n",
+    "nltk.download('punkt')"
    ]
   },
   {
