Remove dependency on PyPDF2

--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "import PyPDF2\n",
+    "import pypdf\n",
     "from nltk.tokenize import sent_tokenize"
    ]
   },
@@ -145,7 +145,7 @@
    "source": [
     "# Read PDF file\n",
     "with open(\"data/research_paper.pdf\", \"rb\") as pdf_file:\n",
-    "    pdf_pages = PyPDF2.PdfReader(pdf_file).pages\n",
+    "    pdf_pages = pypdf.PdfReader(pdf_file).pages\n",
     "    page_list = [page.extract_text() for page in pdf_pages]"
    ]
   },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d70ca10",
+   "id": "4f129e3b",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ba0c62",
+   "id": "665d805f",
    "metadata": {},
    "outputs": [],
    "source": [
