Fix links to use-case samples

--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -892,12 +892,12 @@
     "## Next Steps\n",
     "\n",
     "Now that you’re successfully making indexes with KDB.AI, you can start inserting your own data or view more examples:\n",
-    "- [Unstructured PDF Search](https://github.com/KxSystems/kdbai-notebooks/tree/main/notebooks/samples/document-search)\n",
-    "- [Image Search](https://github.com/KxSystems/kdbai-notebooks/tree/main/notebooks/samples/image-search)\n",
-    "- [Recommendation System](https://github.com/KxSystems/kdbai-notebooks/tree/main/notebooks/samples/music_recommendation)\n",
-    "- [Sensor Pattern Matching](https://github.com/KxSystems/kdbai-notebooks/tree/main/notebooks/samples/pattern-matching)\n",
-    "- [Sentiment Analysis](https://github.com/KxSystems/kdbai-notebooks/blob/main/notebooks/samples/sentiment-analysis/sentiment_analysis.ipynb)\n",
-    "- [Retrieval Augmented Generation with LangChain](https://github.com/KxSystems/kdbai-notebooks/tree/main/notebooks/samples/langchain)"
+    "- [PDF Document Search](../document_search)\n",
+    "- [MRI Image Search](../image_search)\n",
+    "- [Music Recommendation System](../music_recommendation)\n",
+    "- [Sensor Pattern Matching](../pattern_matching)\n",
+    "- [Retrieval Augmented Generation with LangChain](../retrieval_augmented_generation)\n",
+    "- [Sentiment Analysis of Reviews](../sentiment_analysis)"
    ]
   }
  ],
