Add missing section to NB contents cell

--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -21,6 +21,7 @@
     "1. Create Song Vector Embeddings\n",
     "1. Store Embeddings In KDB.AI\n",
     "1. Search For Similar Songs To A Target Song\n",
+    "1. Delete the KDB.AI Table\n",
     "\n",
     "---"
    ]
@@ -2657,7 +2658,7 @@
    "id": "2b4839ed",
    "metadata": {},
    "source": [
-    "## 6. Delete the KDB.AI Table\n",
+    "## 5. Delete the KDB.AI Table\n",
     "\n",
     "Once finished with the table, it is best practice to drop it."
    ]
