Rename NB section

--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -21,7 +21,7 @@
     "1. Perform Sentiment Analysis On The Reviews\n",
     "1. Create Review Vector Embeddings\n",
     "1. Store Embeddings in KDB.AI\n",
-    "1. Search For Similar Reviews To A Target Review\n",
+    "1. Get The Sentiment Of Similar Reviews To A Target Query\n",
     "1. Delete the KDB.AI Table\n",
     "\n",
     "By the end of this tutorial, you'll not only have a deeper understanding of sentiment analysis but also the tools and knowledge to harness the insights hidden within vast datasets of customer reviews. Let's embark on this journey to uncover the magic and meaning behind Disneyland Resort reviews with sentiment analysis and KDB.AI.\n",
@@ -1522,7 +1522,7 @@
    "id": "9dece108",
    "metadata": {},
    "source": [
-    "## 5. Search For Similar Reviews To A Target Review"
+    "## 5. Get The Sentiment Of Similar Reviews To A Target Query"
    ]
   },
   {
