Add link to image search model

--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -348,30 +348,13 @@
    "id": "0f70f8c8-de2b-455d-96f3-05fe5a98c38b",
    "metadata": {},
    "source": [
-    "### Extract Model From Zip File"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f732b2be-ebc2-4517-b254-243c8ef12b22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract model from Zip file\n",
-    "def extract_zip(file_name: str, target: str) -> None:\n",
-    "    with ZipFile(file_name, \"r\") as zipf:\n",
-    "        zipf.extractall(target_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fada67d8-921e-4f75-8815-8948accf359f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "extract_zip(\"models/model.zip\", target=\"models\")"
+    "### Download The Model From Azure Blob Storage\n",
+    "\n",
+    "The model is currently sorted on Azure blob storage and can be downloaded by clicking the following link:\n",
+    "\n",
+    "    https://kxevg.blob.core.windows.net/fileshares/mri_resnet_network.h5\n",
+    "\n",
+    "The downloaded file should be placed into the `models` folder."
    ]
   },
   {
