Pull Image Search embedding model from HuggingFace

--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "# embeddings\n",
     "from tensorflow.keras.utils import image_dataset_from_directory\n",
-    "from tensorflow.keras.models import load_model\n",
+    "from huggingface_hub import from_pretrained_keras\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -345,20 +345,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f70f8c8-de2b-455d-96f3-05fe5a98c38b",
-   "metadata": {},
-   "source": [
-    "### Download The Model From Azure Blob Storage\n",
-    "\n",
-    "The model is currently sorted on Azure blob storage and can be downloaded by clicking the following link:\n",
-    "\n",
-    "    https://kxevg.blob.core.windows.net/fileshares/mri_resnet_network.h5\n",
-    "\n",
-    "The downloaded file should be placed into the `models` folder."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2b8b3736-62f4-4fd3-bb45-ed7be3066c16",
    "metadata": {},
    "source": [
@@ -368,7 +354,32 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2bfed237-5022-4ec2-bf60-31816537f6a9",
+   "id": "8d085495-97ba-4bcf-9f83-3f469f155ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6e044177d6b4dd4acd0611982f9790f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = from_pretrained_keras(\"KxSystems/mri_resnet_model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1db87c99-fe3d-47bd-bf23-9fc9036ea3cb",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +407,6 @@
     }
    ],
    "source": [
-    "model = load_model(\"models/mri_resnet_network.h5\")\n",
     "model.summary()"
    ]
   },
