Update recommended use of ? to conform to Pep8 standard

--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Need help understanding a function?</b><br/>\n",
-    "Add ? after any function name in KDB.AI to bring up the documentation for that function along with sample code and arguments.\n",
+    "Add ? before or after any function name in KDB.AI to bring up the documentation for that function along with sample code and arguments.\n",
     "</div>"
    ]
   },
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kdbai.Session?"
+    "?kdbai.Session"
    ]
   },
   {
@@ -201,7 +201,7 @@
     "- All columns must have either a `pytype` or a `qtype` specified, except the column of vectors.\n",
     "- One column of vector embeddings may also have a `vectorIndex` attribute with the configuration of the index for similarity search - this column is implicitly an array of `float32`.\n",
     "\n",
-    "Run `session.create_table?` for more details and sample code.\n"
+    "Run `?session.create_table` for more details and sample code."
    ]
   },
   {
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.create_table?"
+    "?session.create_table"
    ]
   },
   {
@@ -505,7 +505,8 @@
    "id": "55e69a5b",
    "metadata": {},
    "source": [
-    "The `query` function accepts a wide range of arguments to make it easy to filter,aggregate and sort. Run `table.query?` to see them all.\n",
+    "The `query` function accepts a wide range of arguments to make it easy to filter, aggregate, and sort.\n",
+    "Run `?table.query` to see them all.\n",
     "\n",
     "Let's filter for ids equal to 'l' only. Two rows are returned as expected."
    ]
@@ -588,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.search?"
+    "?table.search"
    ]
   },
   {
