Add tqdm for timing insert

--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -76,6 +76,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "a1bf575c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# timing\n",
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "afa4c3cd",
    "metadata": {},
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b4f29527",
    "metadata": {},
    "outputs": [],
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d28588d9",
    "metadata": {},
    "outputs": [],
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bf07de0a",
    "metadata": {},
    "outputs": [],
@@ -156,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "082ccef4",
    "metadata": {},
    "outputs": [],
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1e138b0a",
    "metadata": {},
    "outputs": [],
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "70881392",
    "metadata": {},
    "outputs": [
@@ -443,7 +454,7 @@
        "4       0.0380  101.665   0.2530  1921  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "44b59370",
    "metadata": {},
    "outputs": [],
@@ -489,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "781e33be",
    "metadata": {},
    "outputs": [],
@@ -500,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d01ceb35",
    "metadata": {},
    "outputs": [],
@@ -515,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6049043d",
    "metadata": {},
    "outputs": [],
@@ -528,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4b9867c7",
    "metadata": {},
    "outputs": [],
@@ -541,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0f3b35c5",
    "metadata": {},
    "outputs": [
@@ -754,7 +765,7 @@
        "4        0.2530       1921  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "4c640b59",
    "metadata": {},
    "outputs": [],
@@ -820,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "df2bc20b",
    "metadata": {},
    "outputs": [],
@@ -839,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bedcbe34",
    "metadata": {},
    "outputs": [],
@@ -854,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e20683ba",
    "metadata": {},
    "outputs": [],
@@ -868,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "980bb2e3",
    "metadata": {},
    "outputs": [
@@ -900,7 +911,7 @@
        " -0.8389748]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "e8614aa0",
    "metadata": {},
    "outputs": [
@@ -960,7 +971,7 @@
        " 'song_year']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "918e76d7",
    "metadata": {},
    "outputs": [],
@@ -989,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "2bb9a127",
    "metadata": {},
    "outputs": [],
@@ -1000,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "7ab28edb",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1043,7 @@
        " -2.142666230649063]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "6c5849e6",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "d5150a08",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1131,7 @@
        " -2.142666230649063]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "40e00e5f",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5af8b92f",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "a5430d33",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1282,7 @@
        "4       [-0.26264292001724243, 0.8120734095573425, 0.90312260389328, 0.13470879197120667, 0.8935577869415283, 0.6051231622695923, -1.26597261428833, 0.3834632635116577, -0.1906394511461258, -0.06401898711919785, 1.3381379842758179, 0.31093665957450867, 0.8109012842178345, -0.344455748796463, 0.09799161553382874, 1.2038298623030903, -0.6732660986156729, -0.5052618172494464, -1.0749308222880805, -0.30920114813582733, -0.5349891074080766, -0.6259258882317768, 0.12674640748174057, 0.24684186220999144, 0.6453499264345925, -1.341031816624747, -0.3752990890558602, -0.49210382468564035, -1.0431389831786564, -2.142666230649063]  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "53c01082",
    "metadata": {},
    "outputs": [],
@@ -1334,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "8f2409e5",
    "metadata": {},
    "outputs": [],
@@ -1352,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "61082605",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1373,7 @@
        "[]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "d535b113",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1416,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "c1c94ebc",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "13bd4adf",
    "metadata": {},
    "outputs": [],
@@ -1474,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "e1179907",
    "metadata": {
     "scrolled": true
@@ -1498,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "a7c74728",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1519,7 @@
        "79.63715362548828"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "c2179418",
    "metadata": {},
    "outputs": [],
@@ -1537,14 +1548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "a6a2fd78",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for i in range((len(embedded_song_df) // chunk_size) + 1):\n",
+    "for i in tqdm(range((len(embedded_song_df) // chunk_size) + 1)):\n",
     "    index = i * chunk_size\n",
     "    table.insert(\n",
     "        embedded_song_df.iloc[index : index + chunk_size].reset_index(drop=True)\n",
