--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -52,13 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from tqdm.notebook import tqdm"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51e1c7ef",
    "metadata": {},
    "outputs": [],
@@ -72,6 +71,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "972ed652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# timing\n",
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5c28352b",
    "metadata": {},
    "outputs": [],
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b1d68085",
    "metadata": {},
    "outputs": [],
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "070348ba",
    "metadata": {},
    "outputs": [],
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a7ec66ab",
    "metadata": {},
    "outputs": [],
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "db32355f",
    "metadata": {},
    "outputs": [],
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cf7619be",
    "metadata": {},
    "outputs": [],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d3a14cc9",
    "metadata": {},
    "outputs": [
@@ -294,7 +304,7 @@
        "4  Disneyland_HongKong  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "087498ed",
    "metadata": {},
    "outputs": [
@@ -331,7 +341,7 @@
        "Name: Branch, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1307fe0a",
    "metadata": {},
    "outputs": [],
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "736bb9d0",
    "metadata": {},
    "outputs": [
@@ -376,7 +386,7 @@
        "Name: Branch, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "fbc35400",
    "metadata": {},
    "outputs": [],
@@ -423,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3c5bad95",
    "metadata": {},
    "outputs": [],
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "4423d909",
    "metadata": {},
    "outputs": [],
@@ -457,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "aa389a8c",
    "metadata": {},
    "outputs": [],
@@ -471,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5fe239da",
    "metadata": {},
    "outputs": [],
@@ -487,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "20f55ae5",
    "metadata": {},
    "outputs": [],
@@ -505,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c05c6529",
    "metadata": {},
    "outputs": [
@@ -527,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9dc613e9",
    "metadata": {},
    "outputs": [
@@ -578,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "c00808a7",
    "metadata": {},
    "outputs": [
@@ -595,15 +605,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Broke for id 668777351\n",
-      "Broke for id 669706763\n",
-      "Broke for id 667308717\n"
-     ]
     }
    ],
    "source": [
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "59d67f97",
    "metadata": {},
    "outputs": [],
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "655a93fb",
    "metadata": {},
    "outputs": [
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "0cd56395",
    "metadata": {},
    "outputs": [],
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "527ca6a6",
    "metadata": {},
    "outputs": [
@@ -904,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f273ecf3",
    "metadata": {},
    "outputs": [],
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "4ef67d97",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "a206e7da",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "1993e9e1",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "b717e590",
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "8cf68a26",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "60e16dea",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "7ab15e75",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "9b895a01",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "3b3a4932",
    "metadata": {},
    "outputs": [],
@@ -1299,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "af604df0",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "f583df69",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "e1d190db-7c19-418e-9140-3dff04c9d4c0",
    "metadata": {},
    "outputs": [],
