Ignore tensorflow warnings

--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -33,6 +33,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b19c5107-001e-40c2-bfe7-6c9c99e4846d",
+   "metadata": {},
+   "source": [
+    "### Set Environment Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2b1c0d58-c704-46e9-8705-93918444abd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e2784416-e45f-4c51-ad12-3ce84382ff38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### ignore tensorflow warnings\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "21979389",
    "metadata": {},
    "source": [
@@ -41,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e6858852",
    "metadata": {},
    "outputs": [],
@@ -53,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9b5a731a",
    "metadata": {},
    "outputs": [],
@@ -66,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2030c51f",
    "metadata": {},
    "outputs": [],
@@ -88,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b870117b",
    "metadata": {},
    "outputs": [],
@@ -106,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9a135635",
    "metadata": {},
    "outputs": [],
@@ -138,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e0b573ca",
    "metadata": {},
    "outputs": [],
@@ -151,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7f36f018",
    "metadata": {},
    "outputs": [],
@@ -181,17 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "5cbf9ede-6ed3-4171-bc77-2da673dcff6b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "581"
+       "591"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "2558747e-4559-44b2-8ecb-88a583cc0ceb",
    "metadata": {},
    "outputs": [
@@ -214,7 +243,7 @@
        "'Draft version August 14, 2023\\nTypeset using L ATEX default style in AASTeX631\\nThe Galactic Interstellar Object Population: A Framework for Prediction and Inference\\nMatthew J. Hopkins\\n ,1Chris Lintott\\n ,1Michele T. Bannister\\n ,2J.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "665d805f",
    "metadata": {},
    "outputs": [],
@@ -267,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "bddc4003",
    "metadata": {},
    "outputs": [],
@@ -279,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "1d05b99a-121c-429e-864a-ee4bc5739224",
    "metadata": {},
    "outputs": [
@@ -287,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(581, 2)\n"
+      "(591, 2)\n"
      ]
     },
     {
@@ -361,7 +390,7 @@
        "4                      Selecting ISO water mass\\nfraction as an example observable quantity, we evaluate its distribution both at the position of the Sun\\nand averaged over the Galactic disk; our prediction for the Solar neighbourhood is compatible with the\\ninferred water mass fraction of 2I/Borisov.  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ce60a36c",
    "metadata": {},
    "outputs": [
@@ -390,7 +419,7 @@
        "384"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "401f8162",
    "metadata": {},
    "outputs": [],
@@ -445,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "3b3a4932",
    "metadata": {},
    "outputs": [],
@@ -475,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "af604df0",
    "metadata": {},
    "outputs": [],
@@ -503,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "6e670f9e",
    "metadata": {},
    "outputs": [],
@@ -518,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "e1d190db-7c19-418e-9140-3dff04c9d4c0",
    "metadata": {},
    "outputs": [],
@@ -536,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "74e7332e",
    "metadata": {},
    "outputs": [
@@ -576,7 +605,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "83cc156c-8071-4784-8c3e-a049b61e8668",
    "metadata": {},
    "outputs": [
@@ -605,7 +634,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ee6ecb8d",
    "metadata": {},
    "outputs": [
@@ -634,7 +663,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(581, 2)\n"
+      "(591, 2)\n"
      ]
     },
     {
@@ -708,7 +737,7 @@
        "4  [-0.06326980888843536, -0.01720455102622509, 0.04773722216486931, 0.0832536369562149, 0.0329662561416626, -0.0660020187497139, 0.0015915802214294672, 0.0032460016664117575, 0.03456268459558487, -0.020524034276604652, 0.0412253700196743, -0.15274155139923096, -0.011771155521273613, 0.073143251240...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b24c1179",
    "metadata": {},
    "outputs": [],
@@ -749,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "d5f8fa5b",
    "metadata": {},
    "outputs": [],
@@ -759,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "8666561e-e9b2-4c9f-95f4-add789be416d",
    "metadata": {},
    "outputs": [
@@ -829,7 +858,7 @@
        "2       0.741215  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "e7486a9c",
    "metadata": {},
    "outputs": [],
@@ -864,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "6765075c",
    "metadata": {},
    "outputs": [],
@@ -874,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "2d3ce969",
    "metadata": {},
    "outputs": [
@@ -944,7 +973,7 @@
        "2       0.954052  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "d74b6f20",
    "metadata": {},
    "outputs": [
@@ -984,7 +1013,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
