--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -39,6 +39,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bd6cfb9-6b68-472f-be47-5b7d03e4564d",
+   "metadata": {},
+   "source": [
+    "### Set Environment Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "08f05e63-9ef8-49ca-b198-aab6d0017579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5be006c3-2bd1-4944-abef-78664e288fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ignore tensorflow warnings\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36f53e98",
    "metadata": {},
    "source": [
@@ -47,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4c8be1e0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "51e1c7ef",
    "metadata": {},
    "outputs": [],
@@ -70,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "972ed652",
    "metadata": {},
    "outputs": [],
@@ -81,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5c28352b",
    "metadata": {},
    "outputs": [],
@@ -92,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b1d68085",
    "metadata": {},
    "outputs": [],
@@ -103,13 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "070348ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "# vector DB\n",
-    "import os\n",
     "import kdbai_client as kdbai\n",
     "from getpass import getpass\n",
     "import time"
@@ -125,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a7ec66ab",
    "metadata": {},
    "outputs": [],
@@ -143,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "db32355f",
    "metadata": {},
    "outputs": [],
@@ -181,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "cf7619be",
    "metadata": {},
    "outputs": [],
@@ -191,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d3a14cc9",
    "metadata": {},
    "outputs": [
@@ -304,7 +332,7 @@
        "4  Disneyland_HongKong  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "087498ed",
    "metadata": {},
    "outputs": [
@@ -341,7 +369,7 @@
        "Name: Branch, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "1307fe0a",
    "metadata": {},
    "outputs": [],
@@ -372,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "736bb9d0",
    "metadata": {},
    "outputs": [
@@ -386,7 +414,7 @@
        "Name: Branch, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "fbc35400",
    "metadata": {},
    "outputs": [],
@@ -433,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "3c5bad95",
    "metadata": {},
    "outputs": [],
@@ -443,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "4423d909",
    "metadata": {},
    "outputs": [],
@@ -467,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "aa389a8c",
    "metadata": {},
    "outputs": [],
@@ -481,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "5fe239da",
    "metadata": {},
    "outputs": [],
@@ -497,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "20f55ae5",
    "metadata": {},
    "outputs": [],
@@ -515,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "c05c6529",
    "metadata": {},
    "outputs": [
@@ -525,7 +553,7 @@
        "\"Disneyland never cease to amaze me! I've been to Disneyland florida and I thought I have exhausted the kid in me but nope! I still had so much fun in disneyland hong kong. 2 DL off my bucketlist and more to come!     \""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9dc613e9",
    "metadata": {},
    "outputs": [
@@ -547,7 +575,7 @@
        "('positive', 0.9825873970985413)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,14 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "c00808a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b81a718760764dd79d6c6252b389bd8e",
+       "model_id": "729ac0bcc1d046288fb980f09138fbb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -629,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "59d67f97",
    "metadata": {},
    "outputs": [],
@@ -643,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "655a93fb",
    "metadata": {},
    "outputs": [
@@ -724,7 +752,7 @@
        "4  670607296  positive   0.56407"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "0cd56395",
    "metadata": {},
    "outputs": [],
@@ -753,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "527ca6a6",
    "metadata": {},
    "outputs": [
@@ -878,7 +906,7 @@
        "4  Disneyland_HongKong  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "f273ecf3",
    "metadata": {},
    "outputs": [],
@@ -936,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "4ef67d97",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1031,7 @@
        "Disneyland_Paris       2.416667  2.500000  4.628571"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "a206e7da",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "1993e9e1",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "b717e590",
    "metadata": {},
    "outputs": [],
@@ -1086,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "8cf68a26",
    "metadata": {},
    "outputs": [],
@@ -1098,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "60e16dea",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "7ab15e75",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1251,7 @@
        "4  [0.11346175, 0.004491506, 0.065638095, 0.05553022, 0.027315821, -0.0062374542, -0.078889824, -0.07142627, -0.04667327, 0.011053055, 0.081861004, -0.104370974, -0.03234411, 0.007316668, 0.08222015,...  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "9b895a01",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "3b3a4932",
    "metadata": {},
    "outputs": [],
@@ -1300,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "af604df0",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "f583df69",
    "metadata": {},
    "outputs": [],
@@ -1347,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "e1d190db-7c19-418e-9140-3dff04c9d4c0",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "83cc156c-8071-4784-8c3e-a049b61e8668",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1403,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "ee6ecb8d",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1537,7 @@
        "4  [0.11346175, 0.004491506, 0.065638095, 0.05553022, 0.027315821, -0.0062374542, -0.078889824, -0.07142627, -0.04667327, 0.011053055, 0.081861004, -0.104370974, -0.03234411, 0.007316668, 0.08222015,...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "5991de18",
    "metadata": {},
    "outputs": [],
@@ -1572,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "046ba059",
    "metadata": {},
    "outputs": [],
@@ -1582,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "660a342f",
    "metadata": {},
    "outputs": [],
@@ -1594,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "cc6bd3df",
    "metadata": {},
    "outputs": [
@@ -1707,7 +1735,7 @@
        "4       0.448586  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "6f4a2dbd",
    "metadata": {},
    "outputs": [],
@@ -1757,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "d9521679",
    "metadata": {},
    "outputs": [
@@ -1813,7 +1841,7 @@
        "2       Disneyland_Paris  {'negative': 5, 'neutral': 0, 'positive': 5}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "aea99cac",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "4ee83675",
    "metadata": {},
    "outputs": [],
@@ -1875,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "b91d5d23",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "a23cf52c",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "id": "55840339",
    "metadata": {},
    "outputs": [],
@@ -1956,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "f903bce9",
    "metadata": {},
    "outputs": [],
@@ -1966,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "id": "e2ee0a25",
    "metadata": {},
    "outputs": [
@@ -2013,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "5bc36aeb",
    "metadata": {},
    "outputs": [],
@@ -2023,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "id": "08d53143",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "4d39b895",
    "metadata": {},
    "outputs": [
@@ -2084,7 +2112,7 @@
        "True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,7 +2138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
