--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -1548,12 +1548,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "a6a2fd78",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ee06e65eb3a4096be4282d472b9ab1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for i in tqdm(range((len(embedded_song_df) // chunk_size) + 1)):\n",
     "    index = i * chunk_size\n",
@@ -1574,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "f9a04081",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1690,7 @@
        "4       [-0.26264292001724243, 0.8120734095573425, 0.90312260389328, 0.13470879197120667, 0.8935577869415283, 0.6051231622695923, -1.26597261428833, 0.3834632635116577, -0.1906394511461258, -0.06401898711919785, 1.3381379842758179, 0.31093665957450867, 0.8109012842178345, -0.344455748796463, 0.09799161553382874, 1.2038298623030903, -0.6732660986156729, -0.5052618172494464, -1.0749308222880805, -0.30920114813582733, -0.5349891074080766, -0.6259258882317768, 0.12674640748174057, 0.24684186220999144, 0.6453499264345925, -1.341031816624747, -0.3752990890558602, -0.49210382468564035, -1.0431389831786564, -2.142666230649063]  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,7 +2727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
