--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -1619,7 +1619,7 @@
     "    filtered_df = sensors_df[\n",
     "        (sensors_df[\"timestamp\"] >= row[\"start_time\"])\n",
     "        & (sensors_df[\"timestamp\"] <= row[\"end_time\"])\n",
-    "    ]\n",
+    "    ].copy()\n",
     "    filtered_df[\"time_difference\"] = filtered_df[\"timestamp\"] - row[\"start_time\"]\n",
     "    filtered_df[\"pattern\"] = i + 1\n",
     "    full_nn1_df = pd.concat([full_nn1_df, filtered_df])"
@@ -1703,7 +1703,7 @@
     "        filtered_df = sensors_df[\n",
     "            (sensors_df[\"timestamp\"] >= row[\"start_time\"])\n",
     "            & (sensors_df[\"timestamp\"] <= row[\"end_time\"])\n",
-    "        ]\n",
+    "        ].copy()\n",
     "        filtered_df[\"time_difference\"] = filtered_df[\"timestamp\"] - row[\"start_time\"]\n",
     "        filtered_df[\"pattern\"] = i + 1\n",
     "        full_nn_df = pd.concat([full_nn_df, filtered_df])\n",
@@ -1806,7 +1806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
